--- a/components/PageSettingComPonent/Notice/less/notice.less
+++ b/components/PageSettingComPonent/Notice/less/notice.less
@@ -24,9 +24,9 @@
     //   color: #437DFF;
     // }
 
-    // .pad_right {
-    //   padding-right: 2em;
-    // }
+    .pad_right {
+      padding-right: 5rem;
+    }
 
     #marquee-content-id {
       pointer-events: none;
