分类样式优化

--- a/components/PageSettingComPonent/Classification/less/classification.less
+++ b/components/PageSettingComPonent/Classification/less/classification.less
@@ -67,16 +67,24 @@
     }
 
     .item .price {
-      font-size: .24rem;
+      font-size: .36rem;
       font-family: PingFangSC-Medium;
       font-weight: 500;
-      height: .24rem;
-      line-height: .24rem;
+      height: .36rem;
+      line-height: .36rem;
       text-align: left;
       color: #FF503F;
       overflow: hidden;
       margin: .16rem 0px .2rem .2rem;
       font-weight: 700;
+    }
+
+    .item .price .big-font {
+      font-size: .36rem;
+    }
+
+    .item .price .middle-font {
+      font-size: .24rem;
     }
 
     .item .price .small {
